--- a/style.css
+++ b/style.css
@@ -35,3 +35,102 @@ nav {
   display: inline-block;
   margin: 0 20px;
 }
+
+
+
+/* main */
+.main {
+  width: 800px;
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0 auto;
+  padding: 50px 0;
+}
+
+#content1 {
+  width: 200px;
+  height: 200px;
+  background-color: #e6ffe9;
+}
+
+#content2 {
+  width: 200px;
+  height: 200px;
+  background-color: #cbffd3;
+}
+
+#content3 {
+  width: 200px;
+  height: 200px;
+  background-color: #aeffbd;
+}
+
+#content4 {
+  width: 200px;
+  height: 200px;
+  background-color: #93ffab;
+}
+
+#content5 {
+  width: 200px;
+  height: 200px;
+  background-color: #f3ffd8;
+}
+
+#content6 {
+  width: 200px;
+  height: 200px;
+  background-color: #edffbe;
+}
+
+#content7 {
+  width: 200px;
+  height: 200px;
+  background-color: #e9ffa5;
+}
+
+#content8 {
+  width: 200px;
+  height: 200px;
+  background-color: #e4ff8d;
+}
+
+#content9 {
+  width: 200px;
+  height: 200px;
+  background-color: #d9e5ff;
+}
+
+#content10 {
+  width: 200px;
+  height: 200px;
+  background-color: #bad3ff;
+}
+
+#content11 {
+  width: 200px;
+  height: 200px;
+  background-color: #a4c6ff;
+}
+
+#content12 {
+  width: 200px;
+  height: 200px;
+  background-color: #8eb8ff;
+}
+
+
+
+
+/* footer */
+footer {
+  width: 100%;
+  height: 120px;
+  background-color: #848482;
+  text-align: center;
+  line-height: 120px;
+}
+
+.footer-text {
+  color: #fff;
+}
